# AI-Software-Engineer-Assistant

./: .gitattributes  .gitignore  README.md  docker-compose.yml  docker-compose.yml.save
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_tables.py  0002_repository_tables.py  0003_analyses_table.py  0004_documents_table.py  0005_chat_history_table.py  0006_reports_table.py  0007_symbols_table.py
backend/app/: main.py
backend/app/application/interfaces/: code_intel.py  git.py  llm.py  repositories.py  security.py  vector.py
backend/app/application/prompts/: __init__.py  analysis.py  chat.py  documentation.py  findings.py  refactoring.py  tests.py
backend/app/core/: config.py  constants.py  logging.py  security.py
backend/app/domain/: enums.py  exceptions.py
backend/app/presentation/: deps.py  errors.py  middleware.py
backend/app/workers/: celery_app.py  dispatcher.py  session.py
backend/tests/: conftest.py  test_chat_helpers.py  test_findings.py  test_repo_files.py  test_report_builder.py
backend/tests/integration/: test_auth_api.py  test_repositories_api.py
backend/tests/unit/: test_analysis_service.py  test_auth_service.py  test_code_metrics.py  test_embedder_prefixes.py  test_embedding_provider.py  test_health.py  test_hybrid_retrieval.py  test_indexing_service.py  test_llm_provider_manager.py  test_llm_structured.py  test_local_embedder.py  test_prompts.py  test_repository_security.py  test_repository_service.py  test_symbol_extractor.py
docs/: DEPLOYMENT.md
(+175 files in other folders)
