[project]
name = "ai-swe-assistant-backend"
version = "0.1.0"
description = "AI Software Engineer Assistant - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "chromadb>=0.5",
    "GitPython>=3.1",
    "structlog>=24.1",
    "tenacity>=8.4",
    "httpx>=0.27",
    "reportlab>=4.2",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers>=4.5",
    "faker>=26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]  # allow asserts in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
